--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -41,20 +41,20 @@ jobs:
       - name: Run tests
         run: bundle exec rspec # bin/rake
 
-  lint:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Ruby and gems
+  #lint:
+    #runs-on: ubuntu-22.04
+    #steps:
+      #- name: Checkout code
+        #uses: actions/checkout@v3
+      #- name: Install Ruby and gems
         # uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
-        uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
+        #uses: ruby/setup-ruby@v1
+        #with:
+          #bundler-cache: true
       # Add or replace any other lints here
       # - name: Security audit dependencies
         # run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: bin/rubocop --parallel
+      #- name: Security audit application code
+        #run: bin/brakeman -q -w2
+      #- name: Lint Ruby files
+        #run: bin/rubocop --parallel
